# CubeEngine

./: .gitignore  CMakeLists.txt  imgui.ini  xmake.lua
assets/locale/: en_US.lang
include/core/: Buffer.hpp  Image.hpp  ImageLoader.hpp  JsonLoader.hpp  LangLoader.hpp  Loader.hpp  Object.hpp  Singleton.hpp  TomlLoader.hpp  Variable.hpp  Version.hpp
include/module/window/: Window.hpp  WindowCloseEvent.hpp  WindowModule.hpp
include/runtime/: Application.hpp  AssetManager.hpp  ConfigManager.hpp  GUIWindow.hpp  IModule.hpp  Loader.hpp  LocaleManager.hpp  Logger.hpp  ModManager.hpp  ResourceManager.hpp  System.hpp  Window.hpp
include/ui/: Button.hpp  Context.hpp  Document.hpp  Font.hpp  Node.hpp
include/util/: Async.hpp  CoTask.hpp  Container.hpp  EventQueue.hpp  Generator.hpp  Handle.hpp  IEvent.hpp  ITask.hpp  IndexHandle.hpp  Interface.hpp  Named.hpp  PromiseType.hpp  ProxyTask.hpp  Singleton.hpp  TString.hpp  Task.hpp  TaskRunner.hpp  With.hpp
include/video/: RenderTarget.hpp  Renderer.hpp  Texture.hpp
src/: main.cpp
src/core/: Buffer.cpp  Image.cpp  ImageLoader.cpp  JsonLoader.cpp  LangLoader.cpp  TomlLoader.cpp  Variable.cpp  Version.cpp
src/module/window/: Window.cpp  WindowModule.cpp
src/runtime/: Application.cpp  AssetManager.cpp  ConfigManager.cpp  GUIWindow.cpp  LocaleManager.cpp  Logger.cpp  ModManager.cpp  ResourceManager.cpp  Window.cpp
src/ui/: Button.cpp  Document.cpp  Font.cpp  Node.cpp
src/util/: EventQueue.cpp  ProxyTask.cpp  Task.cpp  TaskRunner.cpp
src/video/: Renderer.cpp  Texture.cpp
